@@ -1,14 +1,14 @@
 #reposurgeon sourcetype svn
 blob
+mark :102
+data 0
+
+blob
+mark :101
+data 0
+
+blob
 mark :1
-data 0
-
-blob
-mark :2
-data 0
-
-blob
-mark :3
 data 210
 # A simulation of Subversion default ignores, generated by reposurgeon.
 *.o
@@ -29,18 +29,18 @@ data 210
 # Simulated Subversion default ignores end here
 
 blob
-mark :4
+mark :2
 data 34
 File contents for svn revision 2.
 
 commit refs/heads/master
 #legacy-id 2
-mark :5
+mark :3
 committer iay <iay> 1435920920 +0000
 data 60
 comment for svn revision 2
 appended to legacy rev 2 comment
-M 100644 :3 .gitignore
-M 100644 :4 file
+M 100644 :1 .gitignore
+M 100644 :2 file
 
 done
