@@ -1,31 +1,30 @@
 blob
-mark :1
+mark :57
 data 30
 The thing that ate Sheboygan.
 
 blob
-mark :2
+mark :1
 data 20
 1234567890123456789
 
 commit refs/heads/master
-mark :3
+mark :2
 committer Ralf Schlatterbeck <rsc@runtux.com> 0 +0000
 data 14
 First commit.
-M 100644 :2 README
-M 100644 :1 creature
+M 100644 :1 README
 
 blob
-mark :4
+mark :3
 data 20
 0123456789012345678
 
 commit refs/heads/master
-mark :5
+mark :4
 committer Ralf Schlatterbeck <rsc@runtux.com> 10 +0000
 data 15
 Second commit.
-from :3
-M 100644 :4 README
+from :2
+M 100644 :3 README
 
