@@ -1,7 +1,7 @@
 ## Patch a synthetic blob into a repository
 read <min.fi
-blob <<EOF
+blob :57 <<EOF
 The thing that ate Sheboygan.
 EOF
-:3 add M 100644 :1 creature
+:3 add M 100644 :57 creature
 write -
